--- a/src/sass/_marketing.scss
+++ b/src/sass/_marketing.scss
@@ -195,6 +195,7 @@ footer {
     flex-flow: row;
     flex-wrap: nowrap;
     flex-grow: 1;
+    display: inline-block;
     span {
       color: #FFF;
       border: 1px solid #FFF;
@@ -209,6 +210,7 @@ footer {
     flex-grow: 2;
     margin-left: 10px;
     transition: background 250ms linear; 
+    display: inline-block;
     h4 {
       font-weight: normal;
       font-size: $font-size-20;
