--- a/src/sass/_marketing.scss
+++ b/src/sass/_marketing.scss
@@ -269,6 +269,14 @@ footer {
       position: relative;
       top: 2px;
     }
+    .beta {
+      color: #f93f3b;
+      font-weight: 900;
+      background: #fafafa;
+      padding: 8px 8px 2px 8px;
+      border-radius: 8px;
+      margin-left: 5px;
+    }
   }
 }
 
@@ -364,6 +372,9 @@ footer {
       .r1-copy {
         @include tablet-portrait-and-up() {
           margin-top: 100px;
+        }
+        .c-beta {
+          color: #f93f3b;
         }
         margin-top: 120px;
       }
@@ -602,6 +613,14 @@ footer {
         font-weight: bold;
         margin-right: 10px;
       }
+      .a-beta {
+        background: #fafafa;
+        color: #f93f3b;
+        padding: 5px 8px 2px 8px;
+        border-radius: 4px;
+        margin-right: 3px;
+        box-shadow: 0 1px 1px rgba(0,0,0,0.15);
+      }
     }
   }
   .action-container {
@@ -625,6 +644,7 @@ footer {
       position: relative;
       top: 5px;
       left: 5px;
+      margin: 0;
     }
   }
 
