--- a/src/sass/_marketing.scss
+++ b/src/sass/_marketing.scss
@@ -177,7 +177,7 @@ footer {
     bottom: 125px;
     right: 40px;
   }
-  bottom: 110px;
+  bottom: 150px;
   right: 7px;
   display: flex;
   flex-flow: row; 
@@ -276,6 +276,11 @@ footer {
       padding: 8px 8px 2px 8px;
       border-radius: 8px;
       margin-left: 5px;
+      @include mobile-only {
+        display: block;
+        margin: 10px auto 0 auto; 
+        width: 90%;
+      }
     }
   }
 }
