--- a/src/sass/_marketing.scss
+++ b/src/sass/_marketing.scss
@@ -276,6 +276,7 @@ footer {
       padding: 8px 8px 2px 8px;
       border-radius: 8px;
       margin-left: 5px;
+      text-shadow: 0 1px 1px rgba(0,0,0,0.10);
       @include mobile-only {
         display: block;
         margin: 10px auto 0 auto; 
