--- a/src/sass/_marketing.scss
+++ b/src/sass/_marketing.scss
@@ -279,8 +279,12 @@ footer {
       text-shadow: 0 1px 1px rgba(0,0,0,0.10);
       @include mobile-only {
         display: block;
-        margin: 10px auto 0 auto; 
+        margin: 5px auto 0 auto; 
         width: 90%;
+        background: none;
+        color: #FFF;
+        padding: 0;
+        text-transform: uppercase;
       }
     }
   }
