Updated screenshots for the marketing website.

--- a/src/sass/_marketing.scss
+++ b/src/sass/_marketing.scss
@@ -369,8 +369,9 @@ footer {
   .row1-container {
     @include mobile-landscape-and-up() {
       margin: 100px auto;
+      margin: 30px auto;
     }
-    margin: 0 auto;
+    margin: 0 auto 30px auto;
     .row1-copy {
       width: 100%;
       /*@include tablet-portrait-and-up() {
