--- a/src/sass/_marketing.scss
+++ b/src/sass/_marketing.scss
@@ -561,7 +561,10 @@ footer {
         padding: 50px;
         min-width: 300px;
         max-width: 400px;
-        width: 75%;
+        width: 100%;
+        @include mobile-landscape-and-up {
+          width: 75%;
+        }
       }
     }
     .row4-copy {
