--- a/src/sass/_marketing.scss
+++ b/src/sass/_marketing.scss
@@ -182,7 +182,7 @@ footer {
   display: flex;
   flex-flow: row; 
   z-index: 11;
-  padding: 20px 20px 10px 20px;
+  padding: 15px 20px 10px 20px;
   border-radius: 8px;
   transition: background 250ms linear; 
   background: rgba(52,52,52,0.8);
@@ -222,6 +222,10 @@ footer {
       color: #FFF;
       margin: 0;
       padding: 0;
+    }
+    .iphone-only {
+      font-size: $font-size-12;
+      text-align: left;
     }
   }
   &:hover {
@@ -666,12 +670,15 @@ footer {
     background: linear-gradient(top, #F2635D, #E71C13);
     border: 1px solid #FF1E18;
     border-radius: 8px;
-    padding: 10px 10px 10px 0px;
+    padding: 5px 10px 10px 0px;
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.15);
     width: 65%;
     margin: 0 auto;
     .icon-container {
       display: inline-block;
+      position: relative;
+      top: -5px;
+      margin-right: 5px;
       span {
         color: $white;
         font-size: 30px;
@@ -693,6 +700,10 @@ footer {
         color: $white;
         padding: 0;
         margin: 0;
+      }
+      .iphone-only {
+        font-size: $font-size-10;
+        text-align: left;
       }
     }
   }
