--- a/src/sass/_request.scss
+++ b/src/sass/_request.scss
@@ -210,7 +210,7 @@
   }
   p {
     text-align: center;
-    margin: 0 0 10px 0;
+    margin: 0 0 15px 0;
   }
 }
 
@@ -266,8 +266,8 @@
   border-radius: 4px 4px 0 0;
   color: #454545;
   font-weight: 500;
-  padding: 20px 0;
-  border: 1px solid #CCC;
+  padding: 25px 0 20px 0;
+  border-bottom: 1px solid #CCC;
   p {
     margin: 0;
     padding: 0;
