--- a/src/sass/_request.scss
+++ b/src/sass/_request.scss
@@ -58,6 +58,7 @@
 }
 
 .request-input {
+  padding: 70px 0 20px 0;
   label {
     input {
       font-weight: 900;
@@ -100,6 +101,12 @@
       color: #FAFAFA;  
       letter-spacing: 1px;
     }
+  }
+  p {
+    font-weight: 900;
+    font-size: $font-size-20;
+    text-transform: uppercase;
+    margin: 0 0 10px 0;
   }
 }
 
