--- a/src/sass/_request.scss
+++ b/src/sass/_request.scss
@@ -250,6 +250,11 @@ textarea:focus, input[type="phone"]:focus, input[type="text"]:focus, input[type=
   }
 }
 
+.error-dialog.show {
+  display: block;
+  z-index: 3;
+}
+
 
 /* 
  * Success Modal Dialog
