Updated request.js and request.html with browser-request and lodash for micro-templating. Input form fields needed -webkit-font-smoothing:antialiased for better font smoothing and readability.

--- a/src/sass/_request.scss
+++ b/src/sass/_request.scss
@@ -106,6 +106,7 @@ textarea:focus, input[type="phone"]:focus, input[type="text"]:focus, input[type=
       -moz-box-shadow:    inset 2px 2px 6px 4px rgba(0,0,0,0.20);
       box-shadow:         inset 2px 2px 6px 4px rgba(0,0,0,0.20);
       transition: all 0.30s ease-in-out;
+      -webkit-font-smoothing: antialiased;
     }
     ::-webkit-input-placeholder {
       margin-left: 5px;
