Download button located in footer now using download endpoint.

--- a/src/sass/_marketing.scss
+++ b/src/sass/_marketing.scss
@@ -668,6 +668,7 @@ footer {
   }
 
   .fapp-btn {
+    cursor: pointer;
     background: linear-gradient(top, #F2635D, #E71C13);
     border: 1px solid #FF1E18;
     border-radius: 4px;
