--- a/src/sass/_request.scss
+++ b/src/sass/_request.scss
@@ -215,7 +215,7 @@ textarea:focus, input[type="phone"]:focus, input[type="text"]:focus, input[type=
  * Error dialog
  */
 .error-dialog {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
