--- a/src/sass/_marketing.scss
+++ b/src/sass/_marketing.scss
@@ -174,7 +174,7 @@ footer {
 .req-btn {
   display: none;
   @include mobile-landscape-and-up() {
-    display: none;
+    display: block;
   }
   position: absolute;
   bottom: 145px;
