--- a/src/sass/_request.scss
+++ b/src/sass/_request.scss
@@ -267,7 +267,7 @@ textarea:focus, input[type="phone"]:focus, input[type="text"]:focus, input[type=
     }
   }
   p {
-    font-size: 14px;
+    font-size: $font-size-16;
     margin: 0 10px 15px 10px;
     text-align: center;
   }
