Updated screenshots to png format for transparent backgrounds.

--- a/src/sass/_marketing.scss
+++ b/src/sass/_marketing.scss
@@ -556,14 +556,14 @@ footer {
     display: none;
     //min-width: 375px;
     /*width: 85%;*/
-    text-align: right;
+    text-align: center;
     img {
-      max-width: 90%;
-      width: 90%;
+      max-width: 70%;
+      width: 70%;
     }
   }
   .row3-img-mobile {
-    width: 85%;
+    width: 70%;
     max-width: 300px;
     min-width: 300px;
     margin: 0 auto;
